--- a/CsWeb/Views/Shared/_LayoutHome.cshtml
+++ b/CsWeb/Views/Shared/_LayoutHome.cshtml
@@ -270,6 +270,10 @@
     </div>
     <!-- basic scripts -->
 
+    <script src="~/Content/jsLogin/plugins/jquery/jquery.min.js" type="text/javascript"></script>
+
+
+
     <script type="text/javascript">
         if ('ontouchstart' in document.documentElement) document.write("<script src='~/Content/assets/js/jquery.mobile.custom.js'>" + "<" + "/script>");
         $(document).ready(function (e) {
