--- a/CsWeb/Views/Cuenta/Registro.cshtml
+++ b/CsWeb/Views/Cuenta/Registro.cshtml
@@ -96,7 +96,7 @@
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         @Html.LabelFor(model => model.Identificacion)
-                                        @Html.EditorFor(model => model.Identificacion, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.EditorFor(model => model.Identificacion, new { htmlAttributes = new { @class = "form-control", type = "number" } })
                                         @Html.ValidationMessageFor(model => model.Identificacion, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -109,7 +109,7 @@
                                     </div>
                                     <div class="col-sm-6 form-group">
                                         @Html.LabelFor(model => model.Telefono)
-                                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", maxlength = 10,  type = "number" } })
                                         @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="col-sm-12 form-group">
