Se agregan titulos en el mapa Localización Veeduria

--- a/CsWeb/Views/Paginas/Localizacion.cshtml
+++ b/CsWeb/Views/Paginas/Localizacion.cshtml
@@ -49,19 +49,23 @@
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1897 1081">
                             <image width="1897" height="1081" xlink:href="~/Content/img/Riav/mapa_completo.png"></image>
                             <a xlink:href="#" id="btnSie" data-toggle="tooltip" data-placement="bottom" title="¿Cómo usar la herramienta?">
-                                <rect x="765" y="74" fill="#fff" opacity="0" width="100" height="100" ></rect>
+                                <title>Sierra Nevada y Perijá</title>
+                                <rect x="765" y="74" fill="#fff" opacity="0" width="100" height="100"></rect>
                             </a>
                             <a xlink:href="#" id="btnAnt">
-                                >
+                                <title>Bajo Cauca y Nordeste Antioqueño</title>
                                 <rect x="681" y="258" fill="#fff" opacity="0" width="87" height="96"></rect>
                             </a>
                             <a xlink:href="#" id="btnCat">
+                                <title>Catatumbo</title>
                                 <rect x="813" y="208" fill="#fff" opacity="0" width="60" height="67"></rect>
                             </a>
                             <a xlink:href="#" id="btnPac">
+                                <title>Pacífico y Frontera Nariñense</title>
                                 <rect x="511" y="554" fill="#fff" opacity="0" width="92" height="100"></rect>
                             </a>
                             <a xlink:href="#" id="btnGF">
+                                <title>Alto Patía y Norte del Cauca</title>
                                 <rect x="611" y="513" fill="#fff" opacity="0" width="63" height="99"></rect>
                             </a>
                         </svg>
